--- a/dominant_color_case_study.ipynb
+++ b/dominant_color_case_study.ipynb
@@ -419,9 +419,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[166, 89, 92],\n",
+       " [217, 212, 208],\n",
+       " [48, 50, 91],\n",
+       " [47, 48, 34],\n",
+       " [214, 203, 199],\n",
+       " [112, 98, 77],\n",
+       " [251, 250, 248],\n",
+       " [92, 76, 71],\n",
+       " [216, 181, 156],\n",
+       " [38, 27, 32],\n",
+       " [140, 134, 136],\n",
+       " [108, 72, 78],\n",
+       " [193, 160, 147],\n",
+       " [50, 43, 44],\n",
+       " [251, 251, 250],\n",
+       " [240, 239, 238],\n",
+       " [18, 22, 45],\n",
+       " [193, 143, 120],\n",
+       " [237, 234, 235],\n",
+       " [31, 31, 27],\n",
+       " [208, 160, 127],\n",
+       " [116, 115, 122],\n",
+       " [201, 189, 193],\n",
+       " [40, 39, 49],\n",
+       " [44, 45, 64],\n",
+       " [240, 240, 240],\n",
+       " [196, 175, 170],\n",
+       " [133, 46, 52],\n",
+       " [154, 145, 146],\n",
+       " [71, 18, 21]]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "colortrip = [j for i in colorTriple for j in i]\n",
     "colortrip"
@@ -429,9 +469,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23.219401041666668,\n",
+       " 29.593098958333336,\n",
+       " 47.1875,\n",
+       " 57.5537109375,\n",
+       " 27.477864583333332,\n",
+       " 14.968424479166668,\n",
+       " 67.9765625,\n",
+       " 15.201497395833332,\n",
+       " 16.821940104166664,\n",
+       " 22.039713541666668,\n",
+       " 63.069661458333336,\n",
+       " 14.890624999999998,\n",
+       " 9.6064453125,\n",
+       " 31.126627604166668,\n",
+       " 59.26692708333333,\n",
+       " 71.4814453125,\n",
+       " 23.8154296875,\n",
+       " 4.703125,\n",
+       " 65.16243489583333,\n",
+       " 25.804361979166668,\n",
+       " 9.033203125,\n",
+       " 28.698893229166668,\n",
+       " 14.411458333333332,\n",
+       " 56.88964843749999,\n",
+       " 58.611979166666664,\n",
+       " 32.069986979166664,\n",
+       " 9.318033854166668,\n",
+       " 48.77571614583333,\n",
+       " 21.621419270833332,\n",
+       " 29.602864583333332]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "label = [j for i in label for j in i]\n",
     "label"
@@ -439,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -463,9 +543,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Grey',\n",
+       " 'Pink',\n",
+       " 'Purple',\n",
+       " 'Black',\n",
+       " 'Pink',\n",
+       " 'Grey',\n",
+       " 'White',\n",
+       " 'Grey',\n",
+       " 'Tan',\n",
+       " 'Black',\n",
+       " 'Grey',\n",
+       " 'Brown',\n",
+       " 'Tan',\n",
+       " 'Black',\n",
+       " 'White',\n",
+       " 'White',\n",
+       " 'Black',\n",
+       " 'Tan',\n",
+       " 'White',\n",
+       " 'Black',\n",
+       " 'Tan',\n",
+       " 'Grey',\n",
+       " 'Tan',\n",
+       " 'Black',\n",
+       " 'Black',\n",
+       " 'White',\n",
+       " 'Tan',\n",
+       " 'Brown',\n",
+       " 'Grey',\n",
+       " 'Black']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Finding Nearest color\n",
     "import math\n",
@@ -484,9 +604,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Black': 30.54443359375,\n",
+       " 'Brown': 6.3666341145833325,\n",
+       " 'Grey': 16.6779296875,\n",
+       " 'Pink': 5.7070963541666675,\n",
+       " 'Purple': 4.71875,\n",
+       " 'Tan': 6.389420572916667,\n",
+       " 'White': 29.595735677083333}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "color_total = {}\n",
     "for i, val in enumerate(cols):\n",
@@ -500,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,9 +658,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0bc442e780>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAd8AAAFKCAYAAABcq1WoAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGRBJREFUeJzt3X1Uk/fdx/EPEBHjE1QDHk7nZp1dqZbZOlT0oAXdrKxW\nXFeltNBOa3WrWnTz4bRD3bQ+69mqTpSqbUUtHdvq3Oqgar3regPzeeLcdNZ5qEUaNHRYQJDl/qPH\n3DLRYAq/mPB+/SUXSfz+yAXvXBchCXA6nU4BAABjAr09AAAArQ3xBQDAMOILAIBhxBcAAMOILwAA\nhhFfAAAMs5j4T+z2ShP/DQAAdwybreNNP8eRLwAAhhFfAAAMI74AABhGfAEAMIz4AgBgGPEFAMAw\n4gsAgGHEFwAAw4gvAACGEV8AAAwjvgAAGEZ8AQAwjPgCAGCYkXc1AnCjZ/dv9PYIzeb1uAneHgHw\nKRz5AgBgmNsj3+rqas2ZM0cXL17UlStX9KMf/Uj33XefZs2apfr6etlsNi1fvlzBwcEm5gUAwOe5\nje/777+vPn36aOLEiTp//rzGjx+vhx56SCkpKRo5cqRWrVql3NxcpaSkmJgXAACf5/a0c2JioiZO\nnChJKi0tVUREhIqKijRs2DBJUnx8vAoKClp2SgAA/EiTn3CVnJysCxcuKDMzUz/4wQ9cp5m7dOki\nu91+y+uGhVllsQR9uUkB3LFsto7eHgHwKU2O71tvvaWTJ09q5syZcjqdru3X//tmHI4qz6YD4BPs\n9kpvjwDccW71oNTtaefi4mKVlpZKkqKiolRfX6/27durpqZGklRWVqbw8PBmGhUAAP/nNr4HDx7U\npk2bJEnl5eWqqqrSoEGDlJeXJ0nKz89XXFxcy04JAIAfcXvaOTk5WS+//LJSUlJUU1OjuXPnqk+f\nPpo9e7ZycnIUGRmppKQkE7MC8CPP/c//enuEZvPa0EHeHgE+xm18Q0JCtHLlyhu2b968uUUGAgDA\n3/EKVwAAGEZ8AQAwjPgCAGAY8QUAwDDiCwCAYcQXAADDiC8AAIYRXwAADCO+AAAYRnwBADCM+AIA\nYBjxBQDAMOILAIBhxBcAAMOILwAAhhFfAAAMI74AABhGfAEAMIz4AgBgGPEFAMAw4gsAgGHEFwAA\nw4gvAACGEV8AAAwjvgAAGEZ8AQAwjPgCAGAY8QUAwDDiCwCAYcQXAADDiC8AAIYRXwAADCO+AAAY\nRnwBADCM+AIAYBjxBQDAMOILAIBhlqZcaNmyZTp06JCuXr2qSZMmae/evTpx4oRCQ0MlSRMmTNDD\nDz/cknMCAOA33Ma3sLBQp0+fVk5OjhwOh8aMGaOBAwdqxowZio+PNzEjAAB+xW18Y2JiFB0dLUnq\n1KmTqqurVV9f3+KDAQDgr9z+zjcoKEhWq1WSlJubqyFDhigoKEjZ2dlKS0vT9OnTdenSpRYfFAAA\nf9Gk3/lK0u7du5Wbm6tNmzapuLhYoaGhioqK0oYNG7RmzRrNnTv3ptcNC7PKYglqloEB3Hlsto7e\nHsGrWvv6cfuaFN/9+/crMzNTr732mjp27KjY2FjX5xISEjR//vxbXt/hqPpSQwK4s9ntld4ewata\n+/rRuFs9KHN72rmyslLLli3T+vXrXc9unjp1qkpKSiRJRUVF6tWrVzONCgCA/3N75Pvuu+/K4XAo\nPT3dte173/ue0tPT1a5dO1mtVi1evLhFhwQAwJ+4je+4ceM0bty4G7aPGTOmRQYCAMDf8QpXAAAY\nRnwBADCM+AIAYBjxBQDAMOILAIBhxBcAAMOILwAAhhFfAAAMI74AABhGfAEAMIz4AgBgGPEFAMAw\n4gsAgGHEFwAAw4gvAACGEV8AAAwjvgAAGEZ8AQAwjPgCAGAY8QUAwDDiCwCAYcQXAADDiC8AAIYR\nXwAADCO+AAAYRnwBADCM+AIAYBjxBQDAMOILAIBhxBcAAMOILwAAhhFfAAAMI74AABhGfAEAMIz4\nAgBgGPEFAMAw4gsAgGHEFwAAwyxNudCyZct06NAhXb16VZMmTdIDDzygWbNmqb6+XjabTcuXL1dw\ncHBLzwoAgF9wG9/CwkKdPn1aOTk5cjgcGjNmjGJjY5WSkqKRI0dq1apVys3NVUpKiol5AQDweW5P\nO8fExOiXv/ylJKlTp06qrq5WUVGRhg0bJkmKj49XQUFBy04JAIAfcXvkGxQUJKvVKknKzc3VkCFD\n9Oc//9l1mrlLly6y2+23vI2wMKsslqBmGBfAnchm6+jtEbyqta8ft69Jv/OVpN27dys3N1ebNm3S\nd77zHdd2p9Pp9roOR5Vn0wHwCXZ7pbdH8KrWvn407lYPypr0bOf9+/crMzNTWVlZ6tixo6xWq2pq\naiRJZWVlCg8Pb55JAQBoBdzGt7KyUsuWLdP69esVGhoqSRo0aJDy8vIkSfn5+YqLi2vZKQEA8CNu\nTzu/++67cjgcSk9Pd21bsmSJfvrTnyonJ0eRkZFKSkpq0SEBAPAnbuM7btw4jRs37obtmzdvbpGB\nAADwd7zCFQAAhhFfAAAMI74AABhGfAEAMIz4AgBgGPEFAMAw4gsAgGHEFwAAw4gvAACGEV8AAAwj\nvgAAGEZ8AQAwjPgCAGAY8QUAwDDiCwCAYcQXAADDiC8AAIYRXwAADCO+AAAYRnwBADCM+AIAYBjx\nBQDAMOILAIBhxBcAAMOILwAAhlm8PYByd3h7gubz/dHengAA4AM48gUAwDDiCwCAYcQXAADDiC8A\nAIYRXwAADCO+AAAYRnwBADCM+AIAYBjxBQDAMOILAIBhxBcAAMOaFN9Tp05p+PDhys7OliTNmTNH\no0aNUmpqqlJTU7Vv376WnBEAAL/i9o0VqqqqtGDBAsXGxjbYPmPGDMXHx7fYYAAA+Cu3R77BwcHK\nyspSeHi4iXkAAPB7buNrsVgUEhJyw/bs7GylpaVp+vTpunTpUosMBwCAP/Lo/XxHjx6t0NBQRUVF\nacOGDVqzZo3mzp1708uHhVllsQQ1+jm7JwPcoWy2jt4eAfCK1r7vt/b14/Z5FN/rf/+bkJCg+fPn\n3/LyDkeVJ/+Nz7HbK709AuAVrX3fb+3rR+Nu9aDMoz81mjp1qkpKSiRJRUVF6tWrl2eTAQDQCrk9\n8i0uLtbSpUt1/vx5WSwW5eXl6emnn1Z6erratWsnq9WqxYsXm5gVAAC/4Da+ffr00ZYtW27YPmLE\niBYZCAAAf8crXAEAYBjxBQDAMOILAIBhxBcAAMOILwAAhhFfAAAMI74AABhGfAEAMIz4AgBgGPEF\nAMAw4gsAgGHEFwAAw4gvAACGEV8AAAwjvgAAGEZ8AQAwjPgCAGAY8QUAwDDiCwCAYcQXAADDiC8A\nAIYRXwAADCO+AAAYRnwBADCM+AIAYBjxBQDAMOILAIBhxBcAAMOILwAAhhFfAAAMI74AABhGfAEA\nMIz4AgBgGPEFAMAw4gsAgGHEFwAAw4gvAACGEV8AAAxrUnxPnTql4cOHKzs7W5JUWlqq1NRUpaSk\n6MUXX1RtbW2LDgkAgD9xG9+qqiotWLBAsbGxrm2vvvqqUlJStG3bNn31q19Vbm5uiw4JAIA/cRvf\n4OBgZWVlKTw83LWtqKhIw4YNkyTFx8eroKCg5SYEAMDPWNxewGKRxdLwYtXV1QoODpYkdenSRXa7\nvWWmAwDAD7mNrztOp9PtZcLCrLJYghr9nD9l22br6O0RAK9o7ft+a18/bp9H8bVaraqpqVFISIjK\nysoanJJujMNR5dFwvsZur/T2CIBXtPZ9v7WvH4271YMyj/7UaNCgQcrLy5Mk5efnKy4uzrPJAABo\nhdwe+RYXF2vp0qU6f/68LBaL8vLytGLFCs2ZM0c5OTmKjIxUUlKSiVkBAPALbuPbp08fbdmy5Ybt\nmzdvbpGBAADwd7zCFQAAhhFfAAAMI74AABhGfAEAMIz4AgBgGPEFAMAw4gsAgGHEFwAAw4gvAACG\nEV8AAAwjvgAAGEZ8AQAwjPgCAGAY8QUAwDDiCwCAYcQXAADDiC8AAIYRXwAADCO+AAAYRnwBADCM\n+AIAYBjxBQDAMOILAIBhxBcAAMOILwAAhhFfAAAMI74AABhGfAEAMMzi7QEAoDV6d3+Nt0doNolx\nIbd1+frXL7XQJOYFPXuXR9fjyBcAAMOILwAAhhFfAAAMI74AABhGfAEAMIz4AgBgGH9q5GV/f+dJ\nb4/QbO5L2u7tEQDAJ3DkCwCAYcQXAADDPDrtXFRUpBdffFG9evWSJN17773KyMho1sEAAPBXHv/O\nt3///nr11VebcxYAAFoFTjsDAGCYx0e+//znPzV58mR99tlnmjJligYPHnzTy4aFWWWxBDX6Obun\nA9yBbLaOt32dv7fAHN7iyfrhH1r7fe/Z+v3njRVud/0X5D9vrODpvu9RfL/2ta9pypQpGjlypEpK\nSpSWlqb8/HwFBwc3enmHo8qj4XyN3V7p7RG8qrWvvzVr7fc962+967/V2m8VZo9OO0dERCgxMVEB\nAQHq3r27unbtqrKyMk9uCgCAVsejI9/f//73stvtmjBhgux2uy5evKiIiIjmng1+btOe73t7hGYz\nfliut0cA4EM8im9CQoJ+8pOfaM+ePaqrq9P8+fNvesoZAAA05FF8O3TooMzMzOaeBQCAVoE/NQIA\nwDDiCwCAYcQXAADDiC8AAIYRXwAADCO+AAAYRnwBADCM+AIAYBjxBQDAMOILAIBhxBcAAMOILwAA\nhhFfAAAMI74AABhGfAEAMIz4AgBgGPEFAMAw4gsAgGHEFwAAw4gvAACGEV8AAAwjvgAAGEZ8AQAw\njPgCAGAY8QUAwDDiCwCAYcQXAADDiC8AAIYRXwAADCO+AAAYRnwBADCM+AIAYBjxBQDAMOILAIBh\nxBcAAMOILwAAhhFfAAAMs3h6xUWLFunYsWMKCAjQSy+9pOjo6OacCwAAv+VRfP/yl7/o3LlzysnJ\n0ZkzZ/TSSy8pJyenuWcDAMAveXTauaCgQMOHD5ck9ezZU5999pkuX77crIMBAOCvPIpveXm5wsLC\nXB/fddddstvtzTYUAAD+LMDpdDpv90oZGRkaOnSo6+j3ySef1KJFi9SjR49mHxAAAH/j0ZFveHi4\nysvLXR9/+umnstlszTYUAAD+zKP4Dh48WHl5eZKkEydOKDw8XB06dGjWwQAA8FcePdv5oYceUu/e\nvZWcnKyAgADNmzevuecCAMBvefQ7XwAA4Dle4QoAAMOILwAAhnn88pJ3inPnzmnx4sW6ePGiJCky\nMlLz5s3TXXfd5eXJzPj44481atQo9enTR06nU7W1tZo4caLOnj2rmJgYPfjgg41eLyEhQTt37lT7\n9u0NT+y5m63129/+tke399vf/lanT5/W7Nmzm3nSlnX910GSamtrNXPmTOXm5mrEiBGKj49v8m35\n2n4watQorV27Vt27d5ckJSYmavbs2Ro6dKgk6YUXXlB5ebkWLFige++913W9kydP6r333tO0adO0\nZ88excXFKTg42CtraE5LlizRiRMnZLfbVV1dre7du6tz585as2aNt0drdjfb77/1rW95eTLP+HR8\n6+vrNXXqVM2dO9d1B2zYsEGvvPKKVq5c6eXpzOnRo4e2bNkiSaqoqNCYMWO0a9cuhYSEeHmy5tfY\nWuPi4vxyrbdy/dfhwIEDWrduXav4c78BAwbowIED6t69uy5duqTq6modOHDAFd9jx44pIiLihutF\nRUUpKipKkvT6669r4MCBfhHfOXPmSPLdB5K3q7H9fuPGjV6eyjM+Hd8PP/xQvXr1avDI57nnnpPT\n6dScOXPUpk0bVVRU6Be/+IUyMjJUUlKiq1evatq0aQoPD1dGRoa2bdsmSVq3bp3at2+vtLQ0by2n\nWYSGhspms2nevHl65JFH5HA4dOjQIV28eFH/+te/NGHCBD3xxBOuy5eWluqFF15QZmamwsPDvTj5\n7fvvtcbHx+v9999XXl6epkyZopkzZ8pqterpp5/WggULlJSUpMLCQrVp00arV69ucFtbt27Vzp07\nFRgYqOHDh2v8+PFeWtXtKy8vV3h4uK49d/Ly5cv68Y9/rKqqKtXU1CgjI0PR0dH68MMPtWrVKgUF\nBSkxMVHPPvus6zZ8ZT8YMGCA9u7dq8cff1yHDx/WY489pkOHDkmSzpw5o7vvvltt2rTRrl279Mor\nr6iiokLr1q1TSUmJtm7dqoSEBB09elQTJ07U66+/rl//+tc+e7/fTF1dnWbPnq1PP/1U1dXVmjZt\nmoYOHaonn3xSQ4YMUUFBgSoqKrRhwwZ169bN2+N67Np+f/3P+lWrVmnu3LkqKSlRbW2tpk2bptLS\nUjkcDj3//PPKzMzU0aNHlZmZqSNHjujtt9+W0+mUzWbT3/72N33yySdasWKFevfu3eLz+/TvfD/6\n6CN94xvfaLAtMDBQQUFBkqTOnTtr9erV2rlzp2w2m7Zs2aK1a9dq0aJF6tmzp2pra3XhwgVJ0r59\n+5SYmGh8Dc3t448/VkVFherr613bTp06pbVr12rt2rXKzs52bb9y5YpmzZqlhQsX3tE/cG+msbVe\n7+TJk1qxYoXrNGzPnj21bds2RUVF6Xe/+53rciUlJfrTn/6k7du3a+vWrcrPz9cnn3xiZA2eOnv2\nrFJTUzV27FgtWbJEEyZMcH3ObrfriSee0JYtWzRjxgxlZWXJ6XTqZz/7mbKysrR9+3YVFBSopqZG\nkm/tBzExMa7YHjx4UIMGDVJ9fb1qamp04MABDRgwQJLUpUsXvfHGGxoyZIjy8/Nd109KSpLNZlNW\nVpbKysp87n5vioqKCg0ZMkTZ2dlasWJFg1PQnTt31ptvvqnBgwdr9+7dXpzSMzfb76/9rP/jH/+o\n4OBgZWdna/Xq1VqwYIFiYmJ07NgxSV+8LsW1B6mHDx927S91dXXauHGj0tLS9M477xhZi08f+QYG\nBurq1auuj3/4wx/q8uXLunDhgu6//37X2xweOXJEhw4d0uHDhyV98cOmtrZWjz32mHbt2qXExER1\n6NBBXbt29co6vqxrO6TT6VTbtm21dOnSBu8y1bdvXwUFBalbt26qrKx0bZ8/f74SEhJ0//33e2Ns\nj7hb6/W+8pWvNHgN8tjYWElffD0KCwtd+8fx48d17tw511mPzz//XOfPn1dkZGQLr8Zz159+O3Pm\njNLT010PRLt27apf/epX2rhxo2pra2W1WnXp0iW1bdvW9VyI9evXu27Ll/aD0NBQWa1WlZWV6dix\nY0pPT1d0dLSOHj2qgwcPuo6I+/XrJ0mKiIhQRUVFo7fli/d7U3Tu3FlHjx7VW2+9pYCAgAbrv3aW\nMCIiosHPAl9xs/3+2vdycXGxK6gREREKDg5WaGioSktL5XQ6VVdXp3vuuUdnz57V4cOH9fLLL6uw\nsND1denWrZv++te/GlmLT8e3V69eevPNN10fr1u3TtIXTyJxOp1q06aNJKlNmzaaPHmyHn300QbX\nf/TRRzV16lS1a9fuhs/5kut3yGuuD5LF0vjdHBERoR07duipp57ymd9/NbbWt99+2/Xv6x+MXbv/\nr7n2iNfpdCogIKDB5R5++GH9/Oc/b4mRW1zPnj3Vtm1b1xmfN954QxEREVq+fLmOHz+uZcuWKTAw\nUP/5z38avb6v7QcDBgzQ/v37FRAQoJCQEPXr109HjhzR8ePHtXDhQklyfS2k/7/f/5uv3+83s2PH\nDlVVVWn79u0qLy9XSkqK63NN+br4iuv3++u/169fV21trQIDA9WjRw998MEHuueeexQdHa0jR46o\nvLzc9UDLG18Xnz7tPHDgQF24cEF79+51bTtx4oQ+//xzBQb+/9K++c1vas+ePZKkixcvatWqVZK+\neDemzp07a8eOHR4/Y9aXpaenKyEhQWvXrvX2KF9K+/btXe+qde2UZGMOHjwoSTp69Ki+/vWvu7b3\n7t1bRUVFqq6ultPp1MKFC12nZH1BRUWF7Ha764GHw+FwPRt49+7dqqurU1hYmOrr61VWVian06lJ\nkybp3//+tyTf2w8GDBignJwc9e3bV5LUr18/7du3TzabrUlPvAsICFB9fb3P3+8343A4dPfddysg\nIED5+fmqq6vz9kgt4r/3e0l64IEHVFRUJOmL5zEEBgaqU6dOiomJ0ebNm/Xggw+qb9+++sMf/tDg\nZ4A3+HR8AwIC9Nprr2nHjh16/PHHlZycrJUrV2rdunUNvglHjhwpq9Wq5ORkTZ482XVKSpJGjBih\niIiIVvva1JMnT9YHH3yg4uJib4/isdGjR2vjxo2aMGHCTY/ypS8emD3zzDP6xz/+odGjR7u2R0ZG\nKi0tTU899ZTGjh3b5B/i3nTt9Htqaqqef/55ZWRkuB79jx49Wps3b9b48eMVHR0tu92u3/zmN5o3\nb56mTZum5ORkxcbGqlOnTq7b86X9ICYmRidOnHB9H3fp0kUVFRWu043u9O/fXykpKQoJCfG5+70p\nHnnkEb333nt65plnFBoaqrCwMGVmZnp7rGZxq/1ekr773e+qvr5eqampmj59uuusRkxMjAoLC9W3\nb19169ZNH330kfr37++tZUji5SU1e/ZsjRkzRgMHDvT2KGhBvvb3rAD8m08f+X4ZV65c0dixY9Wh\nQwfCCwAwqtUf+QIAYFqrPfIFAMBbiC8AAIYRXwAADCO+AAAYRnwBADCM+AIAYNj/AVD563jDugqm\nAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f0bd81acba8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Overall percentage of color across 10 Images\n",
     "sns.barplot(x, y)"
